	  inability to read from the LCD is a property of the LCD, not of NxConsole.
	  Then add CONFIG_NX_WRITEONLY which is the more generic way of saying that
	  no NX component should try to read from the underlying graphic device (LCD
	  or other).
	* configs/stm3240g-eval/src/up_stmpe11.c:  Add board-specific support for the
	  the STMPE11 I/O expander on the STM3240G-EVAL board.  Verfied that the
	  STM3240G-EVAL touchscreen is now fully functional.
	* include/cxx/cfcntl:  Added std:: header file.
	* graphics/nxbe/nxbe_filltrapezoid.c and graphics/nxglib/fb/nxglib_filltrapezoid.c:
	  Fix several errors in the trapezoid fill logic.
	* include/nuttx/input/touchscreen.h, configs/hymini-stm32, configs/stm3240g-evel,
	* configs/sam3u-ek, configs/sim, arch/sim/src/up_touchscreen.c, and
	  apps/examples/touchscreen: Standardize the board-specific, touchscreen
	  initialization interfaces.
	* drivers/input/stmpe11_base.c and configs/stm3240g-eval:  The STMPE11-based
	  touchscreen seems to work better with edge (vs. level) interrupts
	* drivers/input/stmpe11_tsc.c:  Fix some status checks so that the touchscreen
	  interrupt handling logic does not read data if the fifo is not at the
	  threshold level.
	* include/nuttx/wqueue.h: Add macro work_available() to determine if the
	  previously scheduled work has completed.
	* drivers/stmpe11_tsc.c:  Correct errors: (1) Since all interrupt logic is done on
	  the worker thread, disabling interrupts does not provide protected; Need to
	  disable pre-emption.  (2) Fix handling of touch ID and (2) add some logic to
	  prevent certain kinds of data overrun.
	* include/nx/nxtk.h and graphics/nx/nxtk/nxtk_internal.h:  Move setting
	  of configuration defaults from the internal header file to a place where
	  other logic can use the defaults.
	* graphics/nxtk/nxtk_events.c:  Fixed an important but in the logic that
	  translates the mouse/touchscreen position data for framed windows and toolbars.
